--- a/src/assets/scss/components/_header.scss
+++ b/src/assets/scss/components/_header.scss
@@ -58,7 +58,7 @@
         min-height: 50px;
         
        .nav-menu{
-            background-color: #F5F5F5;
+            background-color: #99aab5;
             min-height: 50px;
             padding-top: 12px;
             a{
@@ -75,14 +75,14 @@
                     height: 3px;
                     bottom: -5px;
                     left: 0;
-                    background-color: burlywood;
+                    background-color: white;
                     transition: width 0.3s;
                 }
                 &:hover{
                     &::before{
                         width: 100%;
                     }
-                    color: burlywood;
+                    color: white;
                 }
             }    
         
