--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -1,70 +1,70 @@
 .container{
+    
     .carousel{
-        .carousel-indicators{
-            button{
-                width: 10px;
-                height: 10px;
-                border-radius: 50%;
+        padding: 50px;
+        width: 100%;
+        margin: 0 auto;
+        .card{
+            columns: 2;
+            border: 1px solid #fff;
+            background: #f7f7f7;
+            border-radius: 10px;
+            overflow: hidden;
+            height: 500px;
+            img{
+                padding-right: 15%;
+                width: 680px;
+                height: 550px;
             }
-        }
-        .carousel-inner{
-            
-            .carousel-item{
-                columns: 2;
-
-                img{
-                    padding-left: 20%;
-                    width: 680px;
-                    height: 550px;
+            .card-info{
+                justify-content: center;
+                align-items: center;
+                padding-top: 150px;
+                
+                h1{
+                    font-weight: 500;
+                    font-size: 50px;
+                    line-height: 50px;
+                    margin: 20px 0 20px 20px;
                 }
-                .carousel-caption{
-                    width: 400px;
-                    left: 700px;
-                    top: 124px;
-                    h5{
-                        font-weight: 300;
-                        font-size: 40px;
-                        line-height: 48px;
-                    }
-                    p{
-                        font-weight: 300;
-                        font-size: 20px;
-                        line-height: 24px;
-                    }
-                    a{
-                        background: #22714d;
-                        color: #F8F8F8;
-                        
-                        width: 150px;
-                        height: 50px;
-                        font-weight: 300;
-                        font-size: 25px;
-                        line-height: 24px;
-                        
-                        transition: all 0.5s;
-                        &:hover{
-                            background-color: #c27a2c;
-                            border-radius: 15px;
-                        }
+                p{
+                    font-weight: 300;
+                    font-size: 20px;
+                    line-height: 24px;
+                    margin-bottom: 20px;
+                }
+                a{
+                    background: #22714d;
+                    color: #F8F8F8;   
+                    margin: 20px 0 0 50px;     
+                    width: 150px;
+                    height: 50px;
+                    font-weight: 300;
+                    font-size: 25px;
+                    line-height: 24px;            
+                    transition: all 0.5s;
+                    &:hover{
+                        background-color: #c27a2c;
+                        border-radius: 15px;
                     }
                 }
             }
-
-        }
-        .carousel-control-prev{
-            width: 50px;
-            height: 50px;
-            left: 18px;
-            top: 241.13px;           
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-        }
-        .carousel-control-next{
-            width: 50px;
-            height: 50px;
-            right: 18px;
-            top: 241.13px;           
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-        }
+        }   
+    }
+        // .carousel-control-prev{
+        //     width: 50px;
+        //     height: 50px;
+        //     left: 18px;
+        //     top: 241.13px;           
+        //     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        // }
+        // .carousel-control-next{
+        //     width: 50px;
+        //     height: 50px;
+        //     right: 18px;
+        //     top: 241.13px;           
+        //     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        // }
     }
     .product-feature{
         background: #c27a2c;
@@ -86,4 +86,4 @@
         
     }
    
-}
+
